# novelist

./: .gitignore  Guardfile  LICENSE  README.rst  circle.yml  guard_tools.rb  novelist.cabal  package.yaml  stack.yaml
app/: Main.hs
bench/: Bench.hs
qc-gen/Novelist/: Arbitrary.hs
qc-gen/Novelist/Arbitrary/: QuickCheckF.hs
qc-gen/System/Novelist/: Arbitrary.hs
qc-gen/System/Novelist/Arbitrary/: QuickCheck.hs  QuickCheckF.hs
src/: Lib.hs
src/Novelist/: FSops.hs  NovelistF.hs
src/Novelist/Types/: DirectoryListing.hs  FSopsF.hs  Fix2.hs  MockDirectoryTreeF.hs  NovellaF.hs
src/System/: Novelist.hs
src/System/Novelist/: Novelist.hs  NovelistF.hs  QuickCheck.hs  QuickCheckF.hs
src/System/Novelist/Internal/: Fix2.hs
test/: Main.hs
test/Lib/: LibSpec.hs
test/Novelist/: FSopsSpec.hs  NovelistSpec.hs
test/Novelist/Types/: FSTrace.hs  MockDirectoryTreeF.hs
test/System/: NovelistSpec.hs
