name:                novelist
version:             0.0.0.1
synopsis:            Initial project template from stack
description:         Please see README.rst
homepage:            https://github.com/kgadek/novelist
license:             BSD3
license-file:        LICENSE
author:              Konrad Gądek
maintainer:          kgadek@gmail.com
copyright:           2016, Konrad Gądek
category:            Other
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

description:
  Some description here.

library
  hs-source-dirs:      src
  exposed-modules:     System.Novelist
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , fclabels
                     , mtl
  default-language:    Haskell2010

executable novelist-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , novelist
  default-language:    Haskell2010

test-suite novelist-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test src
  main-is:             Spec.hs
  build-depends:       base
                     , novelist
                     , hspec
                     , HUnit
                     , QuickCheck
                     , fclabels
                     , mtl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fhpc
  default-language:    Haskell2010
  other-modules:       System.NovelistSpec
                    -- src
                     , System.Novelist

benchmark novelist-criterion
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Bench.hs
  build-depends:       base
                     , novelist
                     , criterion
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kgadek/novelist
