name:                novelist
version:             0.0.0.1
synopsis:            Initial project template from stack
description:         Please see README.rst
homepage:            https://github.com/kgadek/novelist
license:             BSD3
license-file:        LICENSE
author:              Konrad Gądek
maintainer:          kgadek@gmail.com
copyright:           2016, Konrad Gądek
category:            Other
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

description:
  Some description here.

library
  hs-source-dirs:      src
  exposed-modules:     System.Novelist
  other-modules:       System.Novelist.QuickCheck
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , fclabels
                     , mtl
                     , deepseq
                     , QuickCheck
  default-language:    Haskell2010
  ghc-options:         -O2

executable novelist-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , novelist
  default-language:    Haskell2010

test-suite novelist-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test src
  main-is:             Main.hs
  build-depends:       base
                     , hspec
                     , hspec-core
                     , HUnit
                     , QuickCheck
                     , fclabels
                     , deepseq
                     , mtl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:       Spec
                     , System.NovelistSpec
                    -- src
                     , System.Novelist
                     , System.Novelist.QuickCheck

benchmark novelist-criterion
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench src
  main-is:             Bench.hs
  build-depends:       base
                     , criterion
                     , QuickCheck
                     , fclabels
                     , deepseq
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010
  other-modules:       System.Novelist
                     , System.Novelist.QuickCheck

source-repository head
  type:     git
  location: https://github.com/kgadek/novelist
