name:                novelist
version:             0.0.0.1
synopsis:            Initial project template from stack
description:         Please see README.rst
homepage:            https://github.com/kgadek/novelist
license:             BSD3
license-file:        LICENSE
author:              Konrad Gądek
maintainer:          kgadek@gmail.com
copyright:           2016, Konrad Gądek
category:            Other
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

description:
  Some description here.

library
  hs-source-dirs:      src
  exposed-modules:     System.Novelist
                     , System.Novelist.NovelistF
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , fclabels
                     , mtl
                     , transformers
                     , deepseq
                     , recursion-schemes
  default-language:    Haskell2010
  ghc-options:         -O2

executable novelist-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , novelist
  default-language:    Haskell2010

test-suite novelist-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test qc-gen
  main-is:             Main.hs
  build-depends:       base
                     , novelist
                     , hspec
                     , hspec-core
                     , HUnit
                     , QuickCheck
                     , fclabels
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:       Spec
                     , System.NovelistSpec
                     , System.Novelist.Arbitrary
                     , System.Novelist.Arbitrary.QuickCheckF

benchmark novelist-criterion
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench qc-gen
  main-is:             Bench.hs
  build-depends:       base
                     , novelist
                     , criterion
                     , QuickCheck
                     , fclabels
                     , deepseq
                     , recursion-schemes
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010
  other-modules:       System.Novelist.Arbitrary
                     , System.Novelist.Arbitrary.QuickCheckF

source-repository head
  type:     git
  location: https://github.com/kgadek/novelist
